# graphic-concentration

./: .gitignore  LICENSE  README.md
DemOpenGL/: .gitignore  CONTRIBUTING.md  LICENSE  README.md  __init__.py  requirements
DemOpenGL/GLE/: cone.py  texas.py
DemOpenGL/GLUT/: gears.py  glutplane.py  gluttimerfunc_testCase.py  molehill.py
DemOpenGL/GLUT/tom/: checker.py  text.py
DemOpenGL/NeHe/: lesson12.py  lesson16.py  lesson18.py  lesson19.py  lesson23.py  lesson4.py  lesson41.py  lesson42.py  lesson45.py  lesson5.py  lesson6-multi.py
DemOpenGL/NeHe/lesson43/: lesson43.py
DemOpenGL/NeHe/lesson44/: glCamera.py  glVector.py
DemOpenGL/NeHe/lesson48/: ArcBall.py  PythonLesson48_Readme.txt
DemOpenGL/da/: dots.py
DemOpenGL/dek/: mandel_image.py  tile.py
DemOpenGL/dek/OglSurface/: Geometry.py  NumericPDB.py  OglFrame.py  triangle.py
DemOpenGL/dek/ogl_surface/: gl_frame.py  numeric_pdb.py  triangle.py
DemOpenGL/dek/surface/: gl_frame.py  numeric_pdb.py
DemOpenGL/gle/: cone.py  helix.py  maintest.py  texas.py
DemOpenGL/glut/: gears.py  glutplane.py  gluttimerfunc.py  molehill.py  shader_test.py
DemOpenGL/glut/tom/: arraytest.py  checker.py  cone.py  conechecker.py  conesave.py  logo.py  lorentz.py  text.py
DemOpenGL/nehe/: lesson1.py  lesson11.py  lesson13.py  lesson2.py  lesson26.py  lesson3.py  lesson4.py  lesson45.py  lesson5.py  lesson6-multi.py  lesson6.py
DemOpenGL/nehe/lesson10/: lesson10.py
DemOpenGL/nehe/lesson11/: build_c.sh  lesson11.py
DemOpenGL/nehe/lesson12/: lesson12.py
DemOpenGL/nehe/lesson16/: lesson16.py
DemOpenGL/nehe/lesson17/: lesson17.py
DemOpenGL/nehe/lesson43/: free_type.py
DemOpenGL/nehe/lesson44/: camera.py  font.py  lesson44.py  point.py
DemOpenGL/nehe/lesson48/: PythonLesson48_Readme.txt  arc_ball.py  lesson48.py  ne_he.py
DemOpenGL/nehe/lesson7/: lesson7.py
DemOpenGL/nehe/lesson8/: lesson8.py
DemOpenGL/nehe/lesson9/: lesson9.py
DemOpenGL/redbook/: LICENSE  cube.py  double.py  drawf.py  fog.py  hello.py  lines.py  movelight.py  scene.py  smooth.py  teapots.py
DemOpenGL/tom/: Line.py  __init__.py  arraytest.py  checker.py  cone.py  conechecker.py  conesave.py  demo.py  first.py  fog.py  line.py  logo.py  lorentz.py  pick.py  poly.py  text.py
asterlike/: Cargo.toml  rust-toolchain
asterlike/.cargo/: config.toml
asterlike/scripts/: build_emscripten.sh  serve_emscripten.sh
asterlike/src/: global.rs  main.rs  object.rs  wrappers.rs
blocks/: Cargo.toml  episode1.rs  episode2.rs  episode3.rs  episode4.rs  episode5.rs
blocks/episode1/: main.rs
blocks/episode2/: main.rs
blocks/episode3/: frag.glsl  main.rs  shader.rs
blocks/episode4/: main.rs  shader.rs
blocks/episode5/: block.rs  frag.glsl  main.rs  matrix.rs  numbers.rs  texture_manager.rs  vert.glsl
blocks/shaders/: frag4.glsl  vert3.glsl  vert4.glsl
blocks/src/: lib.rs  matrix.rs  shader.rs  texture_manager.rs
gdino/: .gitignore  Cargo.toml  README.md
gdino/src/: ai.rs  animator.rs  components.rs  keyboard.rs  main.rs  physics.rs  renderer.rs
gdino/src/components/: enemy.rs  mod.rs  player.rs
programs/: Cargo.toml  README.md
programs/src/: first.rs  main.rs  second.rs  shader.rs
rocket_wasm/: Cargo.toml  LICENSE  README.md
rocket_wasm/public/: index.html
rocket_wasm/public/wasm/: rocket.js  rocket_bg.wasm
rocket_wasm/public/wasm/snippets/rocket-e849a9404784c2e2/js/: draw.js
rocket_wasm/src/: game_state.rs  lib.rs  util.rs
rocket_wasm/src/controllers/: collisions.rs  input.rs  mod.rs  time.rs
rocket_wasm/src/geometry/: mod.rs  point.rs  size.rs
rocket_wasm/src/models/: bullet.rs  enemy.rs  particle.rs  player.rs  vector.rs  world.rs
rust-lazy-foo/: Cargo.toml  README.md  build.rb  rust-toolchain
rust-lazy-foo/lesson01/: main.rs
rust-lazy-foo/lesson02/: main.rs
rust-lazy-foo/lesson03/: main.rs
rust-lazy-foo/lesson04/: main.rs
rust-lazy-foo/lesson05/: main.rs
rust-lazy-foo/lesson06/: main.rs
rust-lazy-foo/lesson07/: main.rs
rust-lazy-foo/lesson08/: main.rs
rust-lazy-foo/lesson09/: main.rs
rust-lazy-foo/lesson10/: main.rs
rust-lazy-foo/lesson11/: main.rs
rust-lazy-foo/lesson12/: main.rs
rust-lazy-foo/lesson13/: main.rs
rust-lazy-foo/lesson14/: main.rs
rust-lazy-foo/lesson15/: main.rs
rust-lazy-foo/lesson16/: main.rs
rust-lazy-foo/lesson17/: main.rs
rust-lazy-foo/lesson18/: main.rs
rust-lazy-foo/lesson21/: main.rs  util.rs
rust-lazy-foo/lesson22/: main.rs
rust-lazy-foo/lesson23/: main.rs
rust-lazy-foo/lesson24/: main.rs
rust-lazy-foo/lesson25/: main.rs
rust-lazy-foo/lesson26/: main.rs
rust-lazy-foo/lesson27/: main.rs
rust-lazy-foo/lesson28/: main.rs
rust-lazy-foo/lesson29/: main.rs  utils.rs
rust-lazy-foo/lesson30/: main.rs
rust-lazy-foo/lesson32/: main.rs
rust-lazy-foo/lesson33/: main.rs
rust-lazy-foo/main_loop/: Cargo.toml  lib.rs
rust-lazy-foo/src/: lesson01.rs  lesson02.rs  lesson03.rs  lesson04.rs  lesson05.rs  lesson06.rs  lesson07.rs  lesson08.rs  lesson09.rs  lesson10.rs  lesson11.rs  lesson12.rs  lesson13.rs  lesson14.rs  lesson15.rs  lesson16.rs  lesson17.rs  lesson18.rs  lesson21.rs  lesson22.rs  lesson23.rs  lesson24.rs  lesson25.rs  lesson26.rs  lesson27.rs  lesson28.rs  lesson30.rs  lesson32.rs  lesson33.rs  lesson35.rs  lesson36.rs  lesson37.rs  lesson38.rs  lesson39.rs  lesson40.rs  lesson41.rs  lesson42.rs  lesson43.rs  lesson44.rs  lesson45.rs  (+8 more)
rust-lazy-foo/src/lesson29/: main.rs
rust-lazy-foo/static/: index(copia).html  index.html  xindex.html
sokoban-rs/: Cargo.toml  README.md
sokoban-rs/src/: main.rs  painter.rs  shadow.rs  tileset.rs
wasmgl-beginning/: Cargo.toml  README.md
wasmgl-beginning/.fleet/: run.json
wasmgl-beginning/public/: index.html
wasmgl-beginning/public/css/: style.css
wasmgl-beginning/public/wasm/: wasmgl_beginning.js  wasmgl_beginning_bg.wasm
wasmgl-beginning/src/: lesson1.rs  lesson2.rs  lib.rs
wasmgl-beginning/src/lesson3/: frag.glsl  mod.rs  vert.glsl
web/: Cargo.toml  package.json  webpack.config.js
web/src/: App.vue  main.rs
web/src/styles/: app.scss
web/templates/: lazyfoo.html
(+25 files in other folders)
