[package]
edition = "2024"
name = "asterlike"
version = "0.2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.10"

[dependencies.sdl3]
default-features = false
features = ["image", "ttf", "unsafe_textures"] # "mixer", "unsafe_textures"
version = "*"
