[package]
version = "0.1.0"
name    = "gdino"
description = "Game tutorial in Rust and Sdl2 chapter 1"
authors = ["Sunjay Varma <varma.sunjay@gmail.com>"]
edition = "2021"

[dependencies.rand]
version = "*"
default-features = false
features = ["std", "std_rng"]

[dependencies.sdl2]
version = "*"
default-features = false
features = ["image"]
