[package]
name = "rocket"
version = "1.1.0"
authors = ["Adolfo Ochagavía <aochagavia92@gmail.com>", "Ismael Belisario <ismaelbeli.com@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
itertools-num = "*"
lazy_static = "*"
pcg_rand = "0.13"

[dependencies.getrandom]
version = "0.2"
features = ["js"]
default-features = false

[dependencies.rand]
version = "0.8"
default-features = false

[dependencies.wasm-bindgen]
version = "0.2.83"

[features]
default = []
