[package]
name = "lazy-foo"
version = "0.6.0"
authors = ["Ysgard <ysgard@gmail.com>", "Ismaelxyz <ismaelbeli.com@gmail.com>"]
edition = "2021"

[dependencies.sdl2]
version = "0.35.2"
default-features = false
features = ["image", "ttf", "mixer", "unsafe_textures"]

[dependencies.rand]
version = "0.8.5"
optional = true

[dependencies.main-loop]
path = "./main_loop"

[[bin]]
name = "lesson01"
path = "src/lesson01.rs"

[[bin]]
name = "lesson02"
path = "src/lesson02.rs"

[[bin]]
name = "lesson03"
path = "src/lesson03.rs"

[[bin]]
name = "lesson04"
path = "src/lesson04.rs"

[[bin]]
name = "lesson05"
path = "src/lesson05.rs"

[[bin]]
name = "lesson06"
path = "src/lesson06.rs"

[[bin]]
name = "lesson07"
path = "src/lesson07.rs"

[[bin]]
name = "lesson08"
path = "src/lesson08.rs"

[[bin]]
name = "lesson09"
path = "src/lesson09.rs"

[[bin]]
name = "lesson10"
path = "src/lesson10.rs"

[[bin]]
name = "lesson11"
path = "src/lesson11.rs"

[[bin]]
name = "lesson12"
path = "src/lesson12.rs"

[[bin]]
name = "lesson13"
path = "src/lesson13.rs"

[[bin]]
name = "lesson14"
path = "src/lesson14.rs"

[[bin]]
name = "lesson15"
path = "src/lesson15.rs"

[[bin]]
name = "lesson16"
path = "src/lesson16.rs"

[[bin]]
name = "lesson17"
path = "src/lesson17.rs"

[[bin]]
name = "lesson18"
path = "src/lesson18.rs"

# Skip 19 20

[[bin]]
name = "lesson21"
path = "src/lesson21.rs"

[[bin]]
name = "lesson22"
path = "src/lesson22.rs"

[[bin]]
name = "lesson23"
path = "src/lesson23.rs"

[[bin]]
name = "lesson24"
path = "src/lesson24.rs"

[[bin]]
name = "lesson25"
path = "src/lesson25.rs"

[[bin]]
name = "lesson26"
path = "src/lesson26.rs"

[[bin]]
name = "lesson27"
path = "src/lesson27.rs"

[[bin]]
name = "lesson28"
path = "src/lesson28.rs"

[[bin]]
name = "lesson29"
path = "lesson29/main.rs"

[[bin]]
name = "lesson30"
path = "src/lesson30.rs"

[[bin]]
name = "lesson32"
path = "src/lesson32.rs"

[[bin]]
name = "lesson33"
path = "src/lesson33.rs"

# Skip 34

[[bin]]
name = "lesson35"
path = "src/lesson35.rs"

[[bin]]
name = "lesson36"
path = "src/lesson36.rs"

[[bin]]
name = "lesson37"
path = "src/lesson37.rs"

[[bin]]
name = "lesson38"
path = "src/lesson38.rs"
required-features = ["rand"]

[[bin]]
name = "lesson39"
path = "src/lesson39.rs"

[[bin]]
name = "lesson40"
path = "src/lesson40.rs"

[[bin]]
name = "lesson41"
path = "src/lesson41.rs"

[[bin]]
name = "lesson42"
path = "src/lesson42.rs"

[[bin]]
name = "lesson43"
path = "src/lesson43.rs"

[[bin]]
name = "lesson44"
path = "src/lesson44.rs"

[[bin]]
name = "lesson45"
path = "src/lesson45.rs"